<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerepadActivity">

    <TextView
        android:id="@+id/PerepadZagolovok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="false"
        android:fontFamily="sans-serif-medium"
        android:text="@string/PerepadZagolovok"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RaskhodTextViewP"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:text="@string/RaskhodRes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/RaskhodP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PerepadZagolovok"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/PlontostTextViewP"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:text="@string/PlotnostTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/RaskhodP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RaskhodTextViewP"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/HoleDiamTextViewP"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:text="@string/HoleDiamRes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/RaskhodP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlontostTextViewP"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/CoeffTextViewP"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:text="@string/CoeffRes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/RaskhodP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HoleDiamTextViewP"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/RaskhodP"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Hint"
        android:inputType="numberDecimal"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/RaskhodTextViewP"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/PlotnostP"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Hintplotnost"
        android:inputType="numberDecimal"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/PlontostTextViewP"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/HoleDIamP"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Hint"
        android:inputType="numberDecimal"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/HoleDiamTextViewP"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/CoeffP"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/HintCoeff"
        android:inputType="numberDecimal"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/CoeffTextViewP"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonCalcP"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoeffTextViewP" />

    <TextView
        android:id="@+id/ResultViewP"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/ResultTextViewP"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalcP"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider12"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/RaskhodTextViewP"
        app:layout_constraintStart_toStartOf="@+id/RaskhodTextViewP"
        app:layout_constraintTop_toBottomOf="@+id/RaskhodTextViewP" />

    <View
        android:id="@+id/divider14"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/PlontostTextViewP"
        app:layout_constraintStart_toStartOf="@+id/PlontostTextViewP"
        app:layout_constraintTop_toBottomOf="@+id/PlontostTextViewP" />

    <View
        android:id="@+id/divider15"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/HoleDiamTextViewP"
        app:layout_constraintStart_toStartOf="@+id/HoleDiamTextViewP"
        app:layout_constraintTop_toBottomOf="@+id/HoleDiamTextViewP" />

    <View
        android:id="@+id/divider16"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/CoeffTextViewP"
        app:layout_constraintStart_toStartOf="@+id/CoeffTextViewP"
        app:layout_constraintTop_toBottomOf="@+id/CoeffTextViewP" />

</androidx.constraintlayout.widget.ConstraintLayout>