<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeakActivity">



<TextView
    android:id="@+id/UtechkiTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:fontFamily="sans-serif-medium"
    android:text="@string/UtechkiTextView"
    android:textSize="25sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/PerepadTextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:elegantTextHeight="false"
        android:paddingVertical="0sp"
        android:text="@string/PerepadTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/Perepad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UtechkiTextView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/ZazorTextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:elegantTextHeight="false"
        android:paddingVertical="0sp"
        android:text="@string/ZazorTextViewRes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/PerepadTextView"
        app:layout_constraintStart_toStartOf="@+id/PerepadTextView"
        app:layout_constraintTop_toBottomOf="@+id/PerepadTextView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/DiameterTextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:elegantTextHeight="false"
        android:paddingVertical="0sp"
        android:text="@string/DiameterTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ZazorTextView"
        app:layout_constraintStart_toStartOf="@+id/ZazorTextView"
        app:layout_constraintTop_toBottomOf="@+id/ZazorTextView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/VyazkostTextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:elegantTextHeight="false"
        android:paddingVertical="0sp"
        android:text="@string/VyazkostTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/DiameterTextView"
        app:layout_constraintStart_toStartOf="@+id/DiameterTextView"
        app:layout_constraintTop_toBottomOf="@+id/DiameterTextView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/PlotnostTextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:elegantTextHeight="false"
        android:paddingVertical="0sp"
        android:text="@string/PlotnostTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/VyazkostTextView"
        app:layout_constraintStart_toStartOf="@+id/VyazkostTextView"
        app:layout_constraintTop_toBottomOf="@+id/VyazkostTextView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/DlinaZazoraTextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:elegantTextHeight="false"
        android:paddingVertical="0sp"
        android:text="@string/DlinaZazoraTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/PlotnostTextView"
        app:layout_constraintStart_toStartOf="@+id/PlotnostTextView"
        app:layout_constraintTop_toBottomOf="@+id/PlotnostTextView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/DlinaKanavkiTextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:elegantTextHeight="false"
        android:paddingVertical="0sp"
        android:text="@string/DlinaKanavkiTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/DlinaZazoraTextView"
        app:layout_constraintStart_toStartOf="@+id/DlinaZazoraTextView"
        app:layout_constraintTop_toBottomOf="@+id/DlinaZazoraTextView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/ChisloKanavokTextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:elegantTextHeight="false"
        android:paddingVertical="0sp"
        android:text="@string/ChisloKanavokTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/DlinaKanavkiTextView"
        app:layout_constraintStart_toStartOf="@+id/DlinaKanavkiTextView"
        app:layout_constraintTop_toBottomOf="@+id/DlinaKanavkiTextView"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/Perepad"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Hint"
        android:inputType="numberDecimal"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/PerepadTextView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

<EditText
    android:id="@+id/Zazor"
    android:layout_width="105dp"
    android:layout_height="60dp"
    android:layout_marginEnd="10dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/Hint"
    android:inputType="numberDecimal"
    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="@+id/ZazorTextView"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/Diameter"
    android:layout_width="105dp"
    android:layout_height="60dp"
    android:layout_marginEnd="10dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/Hint"
    android:inputType="numberDecimal"
    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="@+id/DiameterTextView"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/Vyazkost"
    android:layout_width="105dp"
    android:layout_height="60dp"
    android:layout_marginEnd="10dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/HintLinVyazkost"
    android:inputType="numberDecimal"
    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="@+id/VyazkostTextView"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/Plotnost"
    android:layout_width="105dp"
    android:layout_height="60dp"
    android:layout_marginEnd="10dp"
    android:autofillHints="860"
    android:ems="10"
    android:hint="@string/Hintplotnost"
    android:inputType="numberDecimal"
    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="@+id/PlotnostTextView"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/DlinaZazora"
    android:layout_width="105dp"
    android:layout_height="60dp"
    android:layout_marginEnd="10dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/Hint"
    android:inputType="numberDecimal"
    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="@+id/DlinaZazoraTextView"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/DlinaKanavki"
    android:layout_width="105dp"
    android:layout_height="60dp"
    android:layout_marginEnd="10dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/Hint"
    android:inputType="numberDecimal"
    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="@+id/DlinaKanavkiTextView"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/ChisloKanavok"
    android:layout_width="105dp"
    android:layout_height="60dp"
    android:layout_marginEnd="10dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/Hint"
    android:inputType="numberDecimal"
    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="@+id/ChisloKanavokTextView"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="TextContrastCheck" />

<Button
    android:id="@+id/button"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/button"
    android:textSize="25sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ChisloKanavokTextView" />

<TextView
    android:id="@+id/ResultView"
    android:layout_width="wrap_content"
    android:layout_height="45dp"
    android:layout_marginTop="15dp"
    android:text="@string/ResultTextView"
    android:textSize="20sp"
    android:visibility="invisible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button"
    tools:visibility="visible" />

<View
    android:id="@+id/divider"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintEnd_toEndOf="@+id/PerepadTextView"
    app:layout_constraintStart_toStartOf="@+id/PerepadTextView"
    app:layout_constraintTop_toBottomOf="@+id/PerepadTextView" />

<View
    android:id="@+id/divider2"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintEnd_toEndOf="@+id/ZazorTextView"
    app:layout_constraintStart_toStartOf="@+id/ZazorTextView"
    app:layout_constraintTop_toBottomOf="@+id/ZazorTextView" />

<View
    android:id="@+id/divider3"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintEnd_toEndOf="@+id/DiameterTextView"
    app:layout_constraintStart_toStartOf="@+id/DiameterTextView"
    app:layout_constraintTop_toBottomOf="@+id/DiameterTextView" />

<View
    android:id="@+id/divider4"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintEnd_toEndOf="@+id/VyazkostTextView"
    app:layout_constraintStart_toStartOf="@+id/VyazkostTextView"
    app:layout_constraintTop_toBottomOf="@+id/VyazkostTextView" />

<View
    android:id="@+id/divider5"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintEnd_toEndOf="@+id/PlotnostTextView"
    app:layout_constraintStart_toStartOf="@+id/PlotnostTextView"
    app:layout_constraintTop_toBottomOf="@+id/PlotnostTextView" />

<View
    android:id="@+id/divider6"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintEnd_toEndOf="@+id/DlinaZazoraTextView"
    app:layout_constraintStart_toStartOf="@+id/DlinaZazoraTextView"
    app:layout_constraintTop_toBottomOf="@+id/DlinaZazoraTextView" />

<View
    android:id="@+id/divider7"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintEnd_toEndOf="@+id/DlinaKanavkiTextView"
    app:layout_constraintStart_toStartOf="@+id/DlinaKanavkiTextView"
    app:layout_constraintTop_toBottomOf="@+id/DlinaKanavkiTextView" />

<View
    android:id="@+id/divider8"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintEnd_toEndOf="@+id/ChisloKanavokTextView"
    app:layout_constraintStart_toStartOf="@+id/ChisloKanavokTextView"
    app:layout_constraintTop_toBottomOf="@+id/ChisloKanavokTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>