<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/LeakButton"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/LeakBut"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RaskhodButton"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/RaskhodButton"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/RaskhodBut"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PerepadButton"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/PerepadButton"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="25dp"
        android:text="@string/PerepadBut"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />
</androidx.constraintlayout.widget.ConstraintLayout>